--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,12 @@
 name: PlumpXP
 main: com.github.barneygale.PlumpXP.PlumpXP
 version: 0.1
+author: Barney Gale
+website: http://github.com/barneygale/PlumpXP
+commands:
+   reloadplumpxp:
+      description: Reload PlumpXP config
+      permission: plumpxp.reload
+permissions:
+   plumpxp.reload:
+      description: Allows the player to reload the PlumpXP config
